changes in terminology, changes in the installation procedure, or
changes in invocation. 

When the major version is increased, backward-incompatible changes are
made, which are documented in the file 'MIGRATION', and summarized here. 

------------------------------------------------------------------------

XXXXXXXXXX  Version 2.5

* Concatenation is now supported
* Dynamic transients are now supported
* The handling of dynamic dependencies was rewritten to allow
  concatenation and dynamic transients.  The semantics of existing
  functionality was not changed. 

2016-09-13  Version 2.4.19

* The rules governing what is written on stdout where reworked:  There
  is now only the -s option (silent).  The options -Q and -w were
  removed. 

2016-09-11  Version 2.4.17

* "Verbose mode" is now called "debug mode", and the option was changed
  from -v to -d.  

2016-09-03  Version 2.4.7

* The -B option is renamed to -i, because it is mainly an interactive
  mode, even if only very rudimentary. 

2016-08-31  Version 2.4.2

* Job control:  Jobs are now always put into the background, except when
  the -B function is used.  The -B function must now be used when Stu
  command should read from their standard input. 

2016-08-31  Version 2.4

* Copy rules can now use the -o flag to denote optional copy rules:

A = -o B;

The semantics are:
- When B is not present:
   - Fail when both A is not present
   - Succeed when A is present 
- When B is present, apply the usual rules 

This is particularly useful when working in projects where a certain file
can be updated from a source only for some developers:  The file can be
distributed for the project, and an optional copy rule can be used such
that for developers who have the source file, it will be updated when
necessary, and for developers who don't have the source file, the copy
delivered with the project can always be used. 

2016-08-31  Version 2.3.10

* The environment variable $STU_OPTIONS can now be used to pass options