@@ -2,4 +2,4 @@ main.stu:4:6: no rule to build @xyz, needed by @b
 main.stu:3:5: @b is needed by 'A'
 main.stu:5:6: no rule to build @xyz, needed by @c
 main.stu:3:8: @c is needed by 'A'
-../../stu.test: Targets not rebuilt because of errors
+../../stu.test: Targets not up to date because of errors
