@@ -1,2 +1,2 @@
 Command line argument: no rule to build '12345'
-../../stu.test: Targets not rebuilt because of errors
+../../stu.test: Targets not up to date because of errors
