@@ -1,3 +1,3 @@
 main.stu:10:4: no rule to build 'D', needed by 'B'
 main.stu:5:5: 'B' is needed by 'A'
-../../stu.test: Targets not rebuilt because of errors
+../../stu.test: Targets not up to date because of errors
