@@ -1,3 +1,3 @@
 Command line argument: no rule to build '1111'
 Command line argument: no rule to build '2222'
-../../stu.test: Targets not rebuilt because of errors
+../../stu.test: Targets not up to date because of errors
