@@ -3,4 +3,4 @@ main.stu:9:1: rule with target 'list.${name}'
 main.stu:10:1: rule with target '${name}.B'
 main.stu:3:4: 'list.B' is needed by 'X'
 main.stu:1:4: 'X' is needed by 'A'
-../../stu.test: Targets not rebuilt because of errors
+../../stu.test: Targets not up to date because of errors
