@@ -1,3 +1,3 @@
 Command line argument: no rule to build '3333'
 Command line argument: no rule to build '4444'
-../../stu.test: Targets not rebuilt because of errors
+../../stu.test: Targets not up to date because of errors
